Bugzilla #2901 <https://bugs.freedesktop.org/show_bug.cgi?id=2901> Patch     #2317 <https://bugs.freedesktop.org/attachment.cgi?id=2317> This patch fixes several problems arising if xdm is compiled with IPv6     support, but the (linux) kernel does not support IPv6. (Peter     Breitenlohner)