xdmcp.c
@@ -1,4 +1,4 @@
-/* $XdotOrg: xc/programs/xdm/xdmcp.c,v 1.3 2004/05/24 19:05:01 eich Exp $ */
+/* $XdotOrg: xc/programs/xdm/xdmcp.c,v 1.4 2004/08/07 19:22:01 alanc Exp $ */
 /* $Xorg: xdmcp.c,v 1.4 2001/02/09 02:05:41 xorgcvs Exp $ */
 /*
 
@@ -262,12 +262,15 @@ all_query_respond (
     if (debugLevel > 0) {
 #if defined(IPv6) && defined(AF_INET6) 
 	void *ipaddr;
-	if (family == AF_INET6) {
+	int af_type;
+	if (family == FamilyInternet6) {
 	    ipaddr = & ((struct sockaddr_in6 *) from)->sin6_addr;
+	    af_type = AF_INET6;
 	} else {
 	    ipaddr = & ((struct sockaddr_in *) from)->sin_addr;
+	    af_type = AF_INET;
 	}
-	addrstring = inet_ntop(family, ipaddr, addrbuf, sizeof(addrbuf));
+	addrstring = inet_ntop(af_type, ipaddr, addrbuf, sizeof(addrbuf));
 #else
 	addrstring = inet_ntoa(((struct sockaddr_in *)from)->sin_addr);
 #endif
@@ -1397,7 +1400,7 @@ NetworkAddressToHostname (
     CARD16	connectionType,
     ARRAY8Ptr   connectionAddress)
 {
-    char    *name = 0;
+    char    *name = NULL;
 
     switch (connectionType)
     {
@@ -1434,7 +1437,7 @@ NetworkAddressToHostname (
 			if ((af_type == nai->ai_family) &&
 			  (connectionAddress->length == nai->ai_addrlen) &&
 			  (memcmp(connectionAddress->data,nai->ai_addr,
-			    nai->ai_addrlen) != 0) ) {
+			    nai->ai_addrlen) == 0) ) {
 			    break;
 			}
 		    }
